quality of life changes: - swap colour themes for temp max hp (gold bonus, purple negative)? - convert hp strings to numbers to prevent string concatenation - update portrait on opening HUD to apply CSS changes to hp - give hp, ac, and spell save boxes dimmed background for readability against light portraits

--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -27,6 +27,7 @@
     margin-bottom: -1px;
     padding: 0.75rem;
     position: relative;
+    background-color: rgba(0 0 0 / 30%);
 }
 .portrait-stat-block:not(.player-details):before{
     backdrop-filter: blur(6px);
